add GetUserRecords
